notes container and word wrap fix
-added container for trip notes
-fixed issue where long notes/titles would run out of container
-added validation so accommodation and reservation titles are limited to 25 chars

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -103,6 +103,10 @@
     overflow-x: hidden;
 }
 
+.collapsible-body, .collapsible-header {
+  word-break: break-word;
+}
+
 #user_sett {
    font-size: 50px;
 }
